# flamingpy

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  =3.1.3  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  DOCS.rst  GKP.py  MANIFEST.in  README.md  RHG.py  decoder.py  dev-requirements.txt  dev_requirements.txt  graphstates.py  myscript.py  passive_construct.py  pytest.ini  requirements.txt  setup.py  sims2cloud.sh  simulations.py  test_GKP.py  test_RHG.py  test_decoder.py  test_graphstates.py  test_passive_construct.py  test_simulations.py  threshold_plots.py
.github/: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md  code_of_conduct.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build_tests.yaml  dev_tests.yaml  docs.yaml  examples.yml  format.yaml  format.yml  linting.yaml  linting.yml  linux_wheels.yaml  package_examples.yml  tests.yaml  upload_linux_x64.yaml  upload_macos_x64.yaml  upload_win_x64.yaml
data/: test.csv  test_processed.csv
doc/: Makefile  build_docs.rst  conf.py  custom_directives.py  dev_requirements.txt  easy_installation.rst  faq.rst  index.rst  install.rst  quantum_error_correction.rst  quick_installation.rst  requirements.txt
doc/_ext/: edit_on_github.py
doc/_static/: faq.html  install.html  quantumErrorCorrection.html  style.css
doc/_templates/: localtoc.html
doc/development/: contribution.rst  development_guide.rst  guide_for_devs.rst
doc/help/: frequently_encountered_errors.rst  support.rst
doc/introduction/: introduction.rst
doc/source/: flamingpy.GKP.rst  flamingpy.RHG.rst  flamingpy.decoder.rst  flamingpy.graphstates.rst  flamingpy.lemon.rst  flamingpy.matching.rst  flamingpy.passive_construct.rst  flamingpy.rst  flamingpy.simulations.rst  flamingpy.threshold_plots.rst  flamingpy.viz.rst  fp.codes.rst  fp.cpp.lemonpy.rst  fp.cv.rst  fp.decoders.rst  fp.lemonpy.rst  fp.noise.rst  fp.rst  fp.simulations.rst  fp.utils.rst
doc/tutorials/: README.txt  run_error_correction.py  run_ft_mbqc.py  run_ftqc.py  run_getting_started.py  run_graph_states.py  run_macro_reduce.py  run_tutorial_test.py  tutorial_macro_reduce.py
doc/usage/: getting_started.rst  tutorials.rst
doc/xanadu_theme/: footer.html  header.html
examples/: GKP.py  RHG.py  decoder.py  graphstates.py  lemon_benchmark.py  matching_benchmark.py
flamingpy/: __init__.py  _version.py  simulations.py  simulations.pyx
flamingpy/benchmarks/: decoding.py  lemon.py  matching.py  shortest_path.py  simulations.py
flamingpy/codes/: __init__.py  ldpc_code.py  qcode.py  stabilizer.py  states_menu.py  surface_code.py
flamingpy/cpp/: cpp_mc_loop.cpp  cpp_mc_loop.pyx  lemonpy.cpp
flamingpy/cv/: __init__.py  cv_macro_layer.py  gkp.py  macro_reduce.py  ops.py
flamingpy/decoders/: __init__.py  decoder.py
flamingpy/examples/: decoding.py  gkp.py  graphstates.py  lc_equivalence.py  macro_reduce.py  performances.py  surface_code.py
flamingpy/noise/: __init__.py  base.py  cv.py  iid.py
flamingpy/utils/: __init__.py  cluster_states.py  graph_states.py  linalg.py  viz.py
flamingpy/viz/: EC_plotter.py  EGraph_basics.py  GKP_plotter.py  GraphStates.py  __init__.py  cube_helper.py  graph_helper.py  heat_maps.py  pi_formatters.py
ft_stack/: CMakeLists.txt  GKP.py  RHG.py  __init__.py  decoder.py  graphstates.py  lemon.py  matching.py  passive_construct.py  simulations.py  threshold_plots.py  viz.py
ft_stack/lemonpy/: CMakeLists.txt  lemonpy.cpp  lemonpy.cpp~
src/flamingpy/: GKP.py  RHG.py  __init__.py  _version.py  decoder.py  graphstates.py  lemon.py  matching.py  passive_construct.py  simulations.py  stab_graph.py  threshold_plots.py  viz.py
src/ft_stack/: graphstates.py  lemon.py  passive_construct.py  threshold_plots.py
tests/: conftest.py  test_benchmarks_examples.py  test_init.py  test_qgraph.py
tests/benchmarks/: test_benchmarks.py
tests/codes/: test_graphstates.py  test_surface_code.py
tests/cv/: test_cv_ops.py  test_gkp.py  test_macro_reduce.py
tests/decoders/: test_decoder.py  test_matching.py  test_uf_decoder.py
tests/examples/: test_examples.py
tests/frontend/: test_graphstates.py  test_init.py  (+2 more)
(+78 files in other folders)
